# kintone-app-mcp

./: CLAUDE.md  LICENSE  README.md  config.example.json  pyproject.toml
src/kintone_mcp/: __init__.py  config.py  field_mapper.py  kintone_client.py  server.py
tests/: __init__.py  conftest.py  test_config.py  test_field_mapper.py  test_kintone_client.py  test_server.py
tests/fixtures/: test_config.json
