[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kintone-mcp"
version = "0.1.0"
description = "MCP server for Kintone integration using API tokens"
authors = [
    {name = "Yuichi Sugiyama", email = "oogFranz@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
kintone-mcp = "kintone_mcp.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "black>=25.1.0",
    "ruff>=0.8.5",
    "mypy>=1.14.0",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true